[workspace]
members = [ "src/hyperlight_wasm", "src/examples_common", "src/hyperlight_wasm_aot" ]
exclude = [ "src/wasm_runtime",  "src/rust_wasm_samples", "src/hyperlight_wasm_macro", "src/component_sample" ]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
homepage = "https://github.com/hyperlight-dev/hyperlight-wasm"
repository = "https://github.com/hyperlight-dev/hyperlight-wasm"
readme = "README.md"

[workspace.dependencies]
hyperlight-host = { git = "https://github.com/dblnz/hyperlight", rev = "1b1e0f8b94ef3ffb7d008783b881ce0d2e4da14e", default-features = false, features = ["executable_heap", "init-paging"] }
