[package]
name = "hyperlight-wasm-macro"
version = "0.7.0"
edition = "2024"
description = """
Procedural macros to generate Hyperlight Wasm host and guest bindings from component types
"""

[lib]
name = "hyperlight_wasm_macro"
proc-macro = true

[dependencies]
quote = { version = "1.0.38" }
proc-macro2 = { version = "1.0.93" }
syn = { version = "2.0.96" }
itertools = { version = "0.14.0" }
prettyplease = { version = "0.2.31" }
hyperlight-component-util = { git = "https://github.com/dblnz/hyperlight", rev = "1b1e0f8b94ef3ffb7d008783b881ce0d2e4da14e" }
