[package]
name = "wasm-runtime"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "wasm_runtime"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
hyperlight-common = { git = "https://github.com/dblnz/hyperlight", rev = "1b1e0f8b94ef3ffb7d008783b881ce0d2e4da14e", default-features = false }
hyperlight-guest-bin = { git = "https://github.com/dblnz/hyperlight", rev = "1b1e0f8b94ef3ffb7d008783b881ce0d2e4da14e", features = [ "printf" ] }
hyperlight-guest = { git = "https://github.com/dblnz/hyperlight", rev = "1b1e0f8b94ef3ffb7d008783b881ce0d2e4da14e" }
wasmtime = { version = "34.0.2", default-features = false, features = [ "runtime", "custom-virtual-memory", "custom-native-signals", "component-model" ] }
hyperlight-wasm-macro = { path = "../hyperlight_wasm_macro" }
hyperlight-guest-tracing = { git = "https://github.com/dblnz/hyperlight", rev = "1b1e0f8b94ef3ffb7d008783b881ce0d2e4da14e", features = ["macros"] }
spin = "0.9.8"

[build-dependencies]
cc = "1.2"
cfg-if = { version = "1" }
cargo_metadata = "0.19"
reqwest =  {version = "0.12", default-features = false, features = ["blocking","rustls-tls"] }

[workspace] # indicate that this crate is not part of any workspace

[features]
trace_guest = ["hyperlight-guest/trace_guest", "hyperlight-guest-bin/trace_guest", "hyperlight-common/trace_guest"]
mem_profile = ["hyperlight-guest-bin/mem_profile", "hyperlight-common/mem_profile"]
unwind_guest = ["hyperlight-common/unwind_guest"]
